<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_entradas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pixel.qnapp.Entradas"
    tools:showIn="@layout/activity_entradas">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:text="@string/etxt_importeentrada"
        android:id="@+id/txtImporteSalida" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/txtImporteSalida"
        android:layout_alignLeft="@+id/txtImporteSalida"
        android:layout_alignStart="@+id/txtImporteSalida"
        android:layout_marginTop="11dp"
        android:id="@+id/etxtImporteSalida" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/spnTipoEntrada"
        android:layout_below="@+id/txtTipoImporte"
        android:layout_alignLeft="@+id/txtTipoImporte"
        android:layout_alignStart="@+id/txtTipoImporte" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/txtTipoImporte"
        android:layout_below="@+id/etxtImporteSalida"
        android:layout_alignLeft="@+id/etxtImporteSalida"
        android:layout_alignStart="@+id/etxtImporteSalida"
        android:text="@string/etxt_tipoentrada" />

    <TextView
        android:text="@string/etxt_fechaentrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnTipoEntrada"
        android:layout_alignLeft="@+id/spnTipoEntrada"
        android:layout_alignStart="@+id/spnTipoEntrada"
        android:layout_marginTop="30dp"
        android:id="@+id/txtFechaSalida" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/floatingGuardaEntrada"
        app:backgroundTint="@android:color/holo_green_dark" />


</RelativeLayout>
