<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_salidas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pixel.qnapp.Salidas"
    tools:showIn="@layout/activity_salidas">

    <TextView
        android:text="@string/etxt_importesalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="18dp"
        android:id="@+id/txtImporteSalida" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/txtImporteSalida"
        android:layout_alignLeft="@+id/txtImporteSalida"
        android:layout_alignStart="@+id/txtImporteSalida"
        android:layout_marginTop="20dp"
        android:id="@+id/etxtImporteSalida" />

    <TextView
        android:text="@string/etxt_modosalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxtImporteSalida"
        android:layout_alignLeft="@+id/etxtImporteSalida"
        android:layout_alignStart="@+id/etxtImporteSalida"
        android:layout_marginTop="25dp"
        android:id="@+id/txtModoSalida" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/spnModoSalida"
        android:layout_below="@+id/txtModoSalida"
        android:layout_alignLeft="@+id/txtModoSalida"
        android:layout_alignStart="@+id/txtModoSalida"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/etxt_fechasalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnModoSalida"
        android:layout_alignLeft="@+id/spnModoSalida"
        android:layout_alignStart="@+id/spnModoSalida"
        android:layout_marginTop="28dp"
        android:id="@+id/txtFechaSalida" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/txtFechaSalida"
        android:layout_alignLeft="@+id/txtFechaSalida"
        android:layout_alignStart="@+id/txtFechaSalida"
        android:layout_marginTop="19dp"
        android:id="@+id/etxtFecha" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:layout_alignTop="@+id/etxtFecha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:id="@+id/floatingFecha"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:id="@+id/floatingGuardaSalida"
        app:backgroundTint="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
