<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pixel.qnapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etxt_entradas"
        android:id="@+id/txtv_entradas" />

    <TextView
        android:text="@string/etxt_salidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/etxtEntradas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="$ 99,000"
        android:ems="10"
        android:id="@+id/etxtEntradas"
        android:layout_below="@+id/txtv_entradas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:enabled="false" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:layout_alignBottom="@+id/floatingConfCanel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/floatingConfMain"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/txtv_entradas"
        android:layout_toEndOf="@+id/txtv_entradas"
        android:layout_marginBottom="28dp"
        android:id="@+id/floatingConfigGuard"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_green_dark" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:id="@+id/floatingConfCanel"
        app:backgroundTint="@android:color/holo_red_dark"
        android:visibility="visible"
        android:layout_alignTop="@+id/floatingConfigGuard"
        android:layout_alignRight="@+id/etxtSalidas"
        android:layout_alignEnd="@+id/etxtSalidas"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="$4,600.00"
        android:ems="10"
        android:id="@+id/etxtSalidas"
        android:enabled="false"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:id="@+id/etxtSaldo"
        android:text="99,000"
        android:enabled="false"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textSaldo"
        android:layout_alignLeft="@+id/floatingConfigGuard"
        android:layout_alignStart="@+id/floatingConfigGuard"
        android:fontFamily="sans-serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSaldo"
        android:text="@string/etxt_saldo"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/floatingConfigGuard"
        android:layout_alignEnd="@+id/floatingConfigGuard" />

</RelativeLayout>
